force-app/main/default/objects/Assesment__c.object
<CustomObject>
    <fields>
        <fullName>Academ_Year_Manual_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To manually override the value of the Academic_Year__c field on the assessment record. In case of manual override the value from the Manual_Academ_Year__c field should be used.</description>
        <label>Academic Year Manual Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Academic_Year__c</fullName>
        <formula>IF(
   Academ_Year_Manual_Override__c = TRUE,
   Manual_Academ_Year__c,
   IF(
      OR(
         AND(
             MONTH(DATEVALUE(CreatedDate))=7, 
             DAY(DATEVALUE(CreatedDate))&gt;30
             ), 
         AND(
             MONTH(DATEVALUE(CreatedDate))&lt;=12, 
             MONTH(DATEVALUE(CreatedDate))&gt;=8
             )
        ), 
        TEXT(YEAR(DATEVALUE(CreatedDate)))&amp;&quot;/&quot;&amp; TEXT(YEAR(DATEVALUE(CreatedDate))+1), 
        TEXT(YEAR(DATEVALUE(CreatedDate ))-1)&amp;&quot;/&quot;&amp;TEXT(YEAR(DATEVALUE(CreatedDate)))
      )
  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Academic Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Achievement__c</fullName>
        <inlineHelpText>★★★★ = highest</inlineHelpText>
        <label>Achievement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>----EYFS/PRIMARY----</fullName>
                </value>
                <value>
                    <fullName>★★★★</fullName>
                </value>
                <value>
                    <fullName>★★★</fullName>
                </value>
                <value>
                    <fullName>★★</fullName>
                </value>
                <value>
                    <fullName>★</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>-------------</fullName>
                </value>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Improvement Needed</fullName>
                </value>
                <value>
                    <fullName>Cause for Concern</fullName>
                </value>
                <value>
                    <fullName>------------</fullName>
                </value>
                <value>
                    <fullName>Above Expected Level</fullName>
                </value>
                <value>
                    <fullName>Meeting Expectations</fullName>
                </value>
                <value>
                    <fullName>Below Expected Level</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Comments__c</fullName>
        <label>Comments for Parents</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Approver_Email__c</fullName>
        <description>to be populated by workflow</description>
        <label>Approver Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Assessment_Date_Copy__c</fullName>
        <formula>Assessment_Folder__r.Assessment_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assessment Date (Copy)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assessment_Date__c</fullName>
        <label>Assessment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assessment_Display_Name_Folder__c</fullName>
        <formula>IF(OR(TEXT(Group__r.Group_Type__c) = &quot;Subject&quot;, AND(TEXT(Group__r.Group_Type__c) = &quot;Other&quot;, TEXT(Group__r.Subject_Name__c) &lt;&gt; &quot;&quot;)), TEXT(Group__r.Subject_Name__c) &amp; &quot; - &quot; &amp; Title__c, 

IF(TEXT(Group__r.Group_Type__c) = &quot;School Group&quot;, &quot;Summative Comment&quot;, 

Title__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assessment Display Name (Folder)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessment_Display_Name_Short__c</fullName>
        <description>Used to display the assessment name on some internal reports/charts where space is limited.</description>
        <formula>IF(AND(TEXT(Assessment_Folder__r.Exam_Type__c) &lt;&gt; &quot;&quot;, TEXT(Assessment_Folder__r.Grade_Type__c) &lt;&gt; &quot;&quot;), Group__r.Subject_Name_Short__c &amp;&quot;-&quot;&amp;TEXT(Assessment_Folder__r.Exam_Type__c) &amp;&quot; &quot;&amp; Grade_Type_Short__c, Assessment_Display_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assessment Display Name (Short)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessment_Display_Name__c</fullName>
        <formula>IF(OR(TEXT(Group__r.Group_Type__c) = &quot;Subject&quot;, AND(TEXT(Group__r.Group_Type__c) = &quot;Other&quot;, TEXT(Group__r.Subject_Name__c) &lt;&gt; &quot;&quot;)), TEXT(Group__r.Subject_Name__c) &amp; &quot; - &quot; &amp; Assessment_Folder__r.Title__c,

IF(TEXT(Group__r.Group_Type__c) = &quot;School Group&quot;, &quot;Summative Comment&quot;,

Assessment_Folder__r.Title__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assessment Display Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessment_Display_User__c</fullName>
        <description>Defines the ID of the user that shows in the parent portal for the particular assessment record</description>
        <formula>CASESAFEID(CreatedBy.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assessment Display User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessment_Folder_Created_By__c</fullName>
        <description>A temporary field used to check whether the created by value of the assessment record is the same as the created by value of the assessment folder, using a connector workbook</description>
        <formula>Assessment_Folder__r.CreatedBy.FirstName &amp; &quot; &quot; &amp; Assessment_Folder__r.CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assessment Folder Created By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessment_Folder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assessment Folder</label>
        <referenceTo>Assesment__c</referenceTo>
        <relationshipLabel>Assessments</relationshipLabel>
        <relationshipName>Assessments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assessment_ID_18_Char__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assessment ID (18 Char)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessment_Name__c</fullName>
        <formula>Assessment_Folder__r.Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assessment Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessment_Type_From_Folder__c</fullName>
        <formula>TEXT(Assessment_Folder__r.Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assessment Type From Folder</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auto_Approve__c</fullName>
        <formula>IF(
   OR(
      TEXT(Assessment_Folder__r.Type__c) = &quot;Assignment&quot;, 
      TEXT(Assessment_Folder__r.Type__c) = &quot;Test&quot;
      ), 
   TRUE, 
   IF(
      TEXT(Assessment_Folder__r.Type__c) = &quot;Tracking&quot;, 
      FALSE, 
      Is_Approved__c
      )
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visible in Parent Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Publish__c</fullName>
        <description>Defines the parameters on which an assessment is published</description>
        <formula>IF(TEXT(Type__c) = &quot;Tracking&quot;, FALSE, TRUE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Published</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments_for_Teacher__c</fullName>
        <label>Comments for Teachers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Campus__c</fullName>
        <description>Defines the campus of a student for use in the assessment approval screen</description>
        <formula>CASE(Student__r.Admissions_File__r.Class__c, 
&quot;Pending&quot;,&quot;Campus 1&quot;,
&quot;A&quot;,&quot;Campus 1&quot;, 
&quot;B&quot;,&quot;Campus 1&quot;, 
&quot;C&quot;,&quot;Campus 1&quot;,
&quot;D&quot;,&quot;Campus 1&quot;,
&quot;E&quot;,&quot;Campus 1&quot;,
&quot;F&quot;,&quot;Campus 1&quot;,
&quot;G&quot;,&quot;Campus 1&quot;,
&quot;H&quot;,&quot;Campus 1&quot;,
&quot;Pending (Campus 1: A-H)&quot;,&quot;Campus 1&quot;,
&quot;I&quot;,&quot;Campus 2&quot;,
&quot;J&quot;,&quot;Campus 2&quot;,
&quot;K&quot;,&quot;Campus 2&quot;,
&quot;L&quot;,&quot;Campus 2&quot;,
&quot;M&quot;,&quot;Campus 2&quot;,
&quot;N&quot;,&quot;Campus 2&quot;,
&quot;O&quot;,&quot;Campus 2&quot;,
&quot;P&quot;,&quot;Campus 2&quot;,
&quot;Pending (Campus 2: I-P)&quot;,&quot;Campus 2&quot;,
&quot;Q&quot;,&quot;Campus 3&quot;, 
&quot;R&quot;,&quot;Campus 3&quot;, 
&quot;S&quot;,&quot;Campus 3&quot;, 
&quot;T&quot;,&quot;Campus 3&quot;, 
&quot;U&quot;,&quot;Campus 3&quot;, 
&quot;V&quot;,&quot;Campus 3&quot;, 
&quot;W&quot;,&quot;Campus 3&quot;, 
&quot;X&quot;,&quot;Campus 3&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Campus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Year_Group__c</fullName>
        <formula>TEXT(Student__r.Admissions_File__r.Year_Group__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Year Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Title__c</fullName>
        <formula>Assessment_Folder__r.Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assessment Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deletion_Prevention__c</fullName>
        <formula>ISBLANK(Mid_Term_Report__c)


/*IF(
   AND(
       LEN(TRIM(Grade__c))=2, 
       VALUE(LEFT(TRIM(Grade__c),1))&gt;0, 
       VALUE(LEFT(TRIM(Grade__c),1))&lt;=9, 
       OR(
          RIGHT(TRIM(Grade__c),1)=&quot;A&quot;, 
          RIGHT(TRIM(Grade__c),1)=&quot;B&quot;, 
          RIGHT(TRIM(Grade__c),1)=&quot;C&quot;
          )
       ),
   TRUE, 
   FALSE
   )*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deletion Prevention</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Folder Description</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Effort_ATL_Output_Label__c</fullName>
        <description>Defines the label that is used in the reports output template in the parent portal. NOT YET IN USE.</description>
        <formula>IF(
   AND(
       VALUE(LEFT(Academic_Year__c, 4)) &gt;= 2017,
       OR(
          Year_Group_Grade__c = &quot;PN&quot;,
          Year_Group_Grade__c = &quot;N&quot;,
          Year_Group_Grade__c = &quot;R&quot;
          )
       ),
   &quot;Attitude to Learning&quot;,
   &quot;Effort&quot;
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effort/ATL Output Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effort__c</fullName>
        <description>Primary: ★★★★ = highest
Secondary: 1 = highest</description>
        <inlineHelpText>ATL is only used for EYFS reports that include grades. &apos;ATTITUDE TO LEARNING&apos; or &apos;EFFORT&apos; will appear in the parent portal based on the Year Group a student is in when an assessment is added.</inlineHelpText>
        <label>Effort/ATL</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>----EYFS/PRIMARY----</fullName>
                </value>
                <value>
                    <fullName>★★★★</fullName>
                </value>
                <value>
                    <fullName>★★★</fullName>
                </value>
                <value>
                    <fullName>★★</fullName>
                </value>
                <value>
                    <fullName>★</fullName>
                </value>
                <value>
                    <fullName>------SECONDARY------</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>--------------</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>-------------</fullName>
                </value>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Improvement Needed</fullName>
                </value>
                <value>
                    <fullName>Cause for Concern</fullName>
                </value>
                <value>
                    <fullName>------------</fullName>
                </value>
                <value>
                    <fullName>Above Expected Level</fullName>
                </value>
                <value>
                    <fullName>Meeting Expectations</fullName>
                </value>
                <value>
                    <fullName>Below Expected Level</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exam_Type__c</fullName>
        <label>Exam Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SAT</fullName>
                </value>
                <value>
                    <fullName>GCSE</fullName>
                </value>
                <value>
                    <fullName>A-Level</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Examination__c</fullName>
        <label>External Examination</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>SAT</fullName>
                </value>
                <value>
                    <fullName>IGCSE</fullName>
                </value>
                <value>
                    <fullName>AS Level</fullName>
                </value>
                <value>
                    <fullName>A Level</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_ID_18_Char__c</fullName>
        <description>The ID of the record in the alternate SFDC org, where applicable.</description>
        <externalId>true</externalId>
        <label>External ID (18 Char)</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Folder_Order_Manual_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To manually override the value of the Folder_Order__c field on the assessment record. In case of manual override the value from the Manual_Folder_Order__c field should be used.</description>
        <label>Folder Order Manual Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Folder_Order_Text__c</fullName>
        <formula>TEXT(YEAR(Assessment_Date__c))&amp; 

CASE(Term_Copy__c,&quot;Term 1&quot;,&quot;3&quot;,&quot;Term 3&quot;,&quot;2&quot;,&quot;1&quot;)&amp; 

IF(Mid_Term_Report__c =&quot;YES&quot;,&quot;0&quot;,&quot;1&quot;)&amp; 

CASE(TEXT(Type__c),&quot;Progress Report&quot;,&quot;1&quot;,&quot;Examination&quot;,&quot;1&quot;,&quot;0&quot;)&amp; 

CASE(Group__r.Group_Type__c,&quot;School Group&quot;,&quot;2&quot;,&quot;Tutor Group&quot;,&quot;1&quot;,&quot;0&quot;)&amp; 

Owner_Order_Copy__c &amp; 

Case(Group__r.Subject_Name__c, &quot;Personal, Social and Emotional Development&quot;,&quot;70&quot;, &quot;Communication and Language&quot;,&quot;65&quot;, &quot;Physical Development&quot;,&quot;60&quot;, &quot;English&quot;,&quot;55&quot;, &quot;Literacy&quot;,&quot;54&quot;, &quot;Reading&quot;,&quot;53&quot;, &quot;Writing&quot;,&quot;52&quot;, &quot;Mathematics&quot;,&quot;47&quot;, &quot;Mathematics - Statistics&quot;,&quot;46&quot;, &quot;Numeracy&quot;,&quot;45&quot;, &quot;Understanding the World&quot;,&quot;44&quot;, &quot;Expressive Arts &amp; Design&quot;,&quot;43&quot;, &quot;Science&quot;,&quot;42&quot;, &quot;Physics&quot;,&quot;41&quot;, &quot;Chemistry&quot;,&quot;40&quot;, &quot;Biology&quot;,&quot;39&quot;, &quot;History&quot;,&quot;38&quot;, &quot;Geography&quot;,&quot;37&quot;, &quot;Humanities&quot;,&quot;36&quot;, &quot;Integrated Curriculum&quot;,&quot;35&quot;, &quot;ICT&quot;,&quot;34&quot;, &quot;Computing&quot;,&quot;33&quot;, &quot;Computer Science&quot;,&quot;32&quot;, &quot;Business Studies&quot;,&quot;30&quot;, &quot;Media Studies&quot;,&quot;29&quot;, &quot;Economics&quot;,&quot;28&quot;, &quot;Myanmar&quot;,&quot;26&quot;, &quot;Russian&quot;,&quot;25&quot;, &quot;Chinese&quot;,&quot;24&quot;, &quot;Bahasa&quot;,&quot;23&quot;, &quot;Portuguese&quot;,&quot;22&quot;, &quot;Uzbek&quot;,&quot;21&quot;, &quot;French&quot;,&quot;20&quot;, &quot;Spanish&quot;,&quot;19&quot;, &quot;German&quot;,&quot;17&quot;, &quot;PSHE&quot;,&quot;16&quot;, &quot;Music&quot;,&quot;15&quot;, &quot;Drama&quot;,&quot;14&quot;, &quot;Dance&quot;,&quot;13&quot;, &quot;Art &amp; Design&quot;,&quot;12&quot;, &quot;Graphic Design&quot;,&quot;11&quot;, &quot;PE&quot;,&quot;10&quot;, &quot;Religious Education&quot;,&quot;09&quot;, &quot;Sociology&quot;,&quot;08&quot;, &quot;EAL&quot;,&quot;02&quot;, &quot;Learning Support&quot;,&quot;01&quot;, &quot;00&quot;)&amp; 

CASE(TEXT(Type__c),&quot;Progress Report&quot;,&quot;2&quot;,&quot;Examination&quot;,&quot;1&quot;,&quot;0&quot;)&amp; 

CASE(Grade_Type__c, &quot;Exam&quot;, &quot;5&quot;, &quot;Predicted Grade&quot;, &quot;4&quot;, &quot;Mock Exam&quot;, &quot;3&quot;, &quot;Target Grade&quot;, &quot;2&quot;, &quot;Current Working Grade&quot;, &quot;1&quot;, &quot;0&quot;)&amp; 

LEFT(RIGHT(TEXT(CreatedDate), 15), 2) &amp; 
LEFT(RIGHT(TEXT(CreatedDate), 12), 2) &amp; 
LEFT(RIGHT(TEXT(CreatedDate), 9), 2) &amp; 
LEFT(RIGHT(TEXT(CreatedDate), 6), 2) &amp; 
LEFT(RIGHT(TEXT(CreatedDate), 3), 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Folder Order Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Folder_Order__c</fullName>
        <formula>IF(
   Folder_Order_Manual_Override__c = FALSE,
   VALUE(Folder_Order_Text__c),
   VALUE(Manual_Folder_Order__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Folder Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grade_Type_Short__c</fullName>
        <description>A shortened version of the grade type for use in some internal reports</description>
        <formula>CASE(TEXT(Assessment_Folder__r.Grade_Type__c), &quot;Predicted Grade&quot;, &quot;PG&quot;, &quot;Target Grade&quot;, &quot;TG&quot;, &quot;Current Working Grade&quot;, &quot;CWG&quot;, &quot;Mock Exam&quot;, &quot;Mock&quot;, TEXT(Assessment_Folder__r.Grade_Type__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grade Type (Short)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grade_Type__c</fullName>
        <label>Exam Sub-Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Exam</fullName>
                </value>
                <value>
                    <fullName>Mock Exam</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <label>Grade</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <formula>IF( RecordType.Name = &quot;Assessment Record&quot;, Assessment_Folder__r.Group__r.Name, Group__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Type__c</fullName>
        <formula>TEXT(Group__r.Group_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <referenceTo>Group__c</referenceTo>
        <relationshipLabel>Assessments</relationshipLabel>
        <relationshipName>Assessments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Has_Lettered_Grade_Level__c</fullName>
        <formula>IF(OR(Grade__c = &quot;A*&quot;, Grade__c = &quot;A&quot;, Grade__c = &quot;B&quot;, Grade__c = &quot;C&quot;, Grade__c = &quot;D&quot;, Grade__c = &quot;E&quot;, Grade__c = &quot;F&quot;, Grade__c = &quot;a*&quot;, Grade__c = &quot;a&quot;, Grade__c = &quot;b&quot;, Grade__c = &quot;c&quot;, Grade__c = &quot;d&quot;, Grade__c = &quot;e&quot;, Grade__c = &quot;f&quot;), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Lettered Grade Level</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_NC_Grade__c</fullName>
        <formula>IF(AND(LEN(TRIM(Grade__c))=2, VALUE(LEFT(TRIM(Grade__c),1))&gt;0, VALUE(LEFT(TRIM(Grade__c),1))&lt;=9, OR(RIGHT(TRIM(Grade__c),1)=&quot;A&quot;, RIGHT(TRIM(Grade__c),1)=&quot;B&quot;, RIGHT(TRIM(Grade__c),1)=&quot;C&quot;, RIGHT(TRIM(Grade__c),1)=&quot;a&quot;, RIGHT(TRIM(Grade__c),1)=&quot;b&quot;, RIGHT(TRIM(Grade__c),1)=&quot;c&quot;)), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has NC Grade?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_Target_Predicted_Grade__c</fullName>
        <inlineHelpText>Optional; select &apos;Target&apos; or &apos;Predicted&apos; if you wish to record one of these grade types for the assessments in this folder. Only available for &apos;Progress Reports&apos; and &apos;Examinations&apos;</inlineHelpText>
        <label>Include Target/Predicted Grade?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Target</fullName>
                </value>
                <value>
                    <fullName>Predicted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Letter_Grade_Numerical__c</fullName>
        <formula>CASE(Grade__c, &quot;A*&quot;, 7, &quot;A&quot;, 6, &quot;B&quot;, 5, &quot;C&quot;, 4, &quot;D&quot;, 3, &quot;E&quot;, 2, &quot;F&quot;, 1, &quot;a*&quot;, 7, &quot;a&quot;, 6, &quot;b&quot;, 5, &quot;c&quot;, 4, &quot;d&quot;, 3, &quot;e&quot;, 2, &quot;f&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Letter Grade (Numerical)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Locked_for_Editing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Locked for Editing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manual_Academ_Year__c</fullName>
        <description>To be used for manual override of the Academic Year field. The manual input of the order is used in the Academic_Year__c field</description>
        <label>Manual Academic Year</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manual_Approval__c</fullName>
        <description>Created by Ben on 17/12/2016 to assist with filtering assessments so that they can be manually approved via connector. Needs to be properly tested before use.</description>
        <formula>AND(
    RecordType.DeveloperName = &quot;Assessment_Record&quot;,
    Is_Approved__c = FALSE,
    /* Set School */
    School__c = &quot;The King&apos;s School Manila&quot;,
    /* Set Campus if Required or Comment out for All */
    /*Contact_Campus__c = &quot;Campus 1&quot;,*/
    /* Set Assessment Type */
    /*OR(
       Assessment_Type_From_Folder__c = &quot;Progress Report&quot;,
       Assessment_Type_From_Folder__c = &quot;Examination&quot;
       ),*/
    Assessment_Type_From_Folder__c = &quot;Progress Report&quot;,
    /* Set Assessment Date */
    Assessment_Date_Copy__c &lt;= TODAY(),
    /* Set Year Groups / Grades - If many then may exceed compilation size limit and will need to be broken down into smaller batches */
    OR(
       Contact_Year_Group__c = &quot;PN&quot;,
       Contact_Year_Group__c = &quot;N&quot;,
       Contact_Year_Group__c = &quot;R&quot;,
       Contact_Year_Group__c = &quot;Y1&quot;,
       Contact_Year_Group__c = &quot;Y2&quot;,
       Contact_Year_Group__c = &quot;Y3&quot;,
       Contact_Year_Group__c = &quot;Y4&quot;,
       Contact_Year_Group__c = &quot;Y5&quot;,
       Contact_Year_Group__c = &quot;Y6&quot;,
       Contact_Year_Group__c = &quot;Y7&quot;,
       Contact_Year_Group__c = &quot;Y8&quot;,
       Contact_Year_Group__c = &quot;Y9&quot;
       )
    )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manual Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manual_Folder_Order__c</fullName>
        <description>To be used for manual override of the ordering number in the Folder_Order_Text__c field. The manual input of the order is used in the Folder_Order__c field</description>
        <label>Manual Folder Order</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manual_Term__c</fullName>
        <description>To be used for manual override of the Term field. The manual input of the order is used in the Term__c</description>
        <label>Manual Term</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Term 1</fullName>
                </value>
                <value>
                    <fullName>Term 2</fullName>
                </value>
                <value>
                    <fullName>Term 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mass_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mass Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mid_Term_Report__c</fullName>
        <label>Mid Term Report</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NC_Level_Numerical__c</fullName>
        <formula>CASE(Grade__c, &quot;1c&quot;, 7, &quot;1b&quot;, 9, &quot;1a&quot;, 11, &quot;2c&quot;, 13, &quot;2b&quot;, 15, &quot;2a&quot;, 17, &quot;3c&quot;, 19, &quot;3b&quot;, 21, &quot;3a&quot;, 23, &quot;4c&quot;, 25, &quot;4b&quot;, 27, &quot;4a&quot;, 29, &quot;5c&quot;, 31, &quot;5b&quot;, 33, &quot;5a&quot;, 35, &quot;6c&quot;, 37, &quot;6b&quot;, 39, &quot;6a&quot;, 41, &quot;7c&quot;, 43, &quot;7b&quot;, 45, &quot;7a&quot;, 47, &quot;8c&quot;, 49, &quot;8b&quot;, 51, &quot;8a&quot;, 53, &quot;9c&quot;, 55, &quot;9b&quot;, 57, &quot;9a&quot;, 59,

&quot;1C&quot;, 7, &quot;1B&quot;, 9, &quot;1A&quot;, 11, &quot;2C&quot;, 13, &quot;2B&quot;, 15, &quot;2A&quot;, 17, &quot;3C&quot;, 19, &quot;3B&quot;, 21, &quot;3A&quot;, 23, &quot;4C&quot;, 25, &quot;4B&quot;, 27, &quot;4A&quot;, 29, &quot;5C&quot;, 31, &quot;5B&quot;, 33, &quot;5A&quot;, 35, &quot;6C&quot;, 37, &quot;6B&quot;, 39, &quot;6A&quot;, 41, &quot;7C&quot;, 43, &quot;7B&quot;, 45, &quot;7A&quot;, 47, &quot;8C&quot;, 49, &quot;8B&quot;, 51, &quot;8A&quot;, 53, &quot;9C&quot;, 55, &quot;9B&quot;, 57, &quot;9A&quot;, 59, 

0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NC Level (Numerical)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Approved_Assessments_in_Folder__c</fullName>
        <label>Number of Approved Assessments in Folder</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Assessments_in_Folder__c</fullName>
        <label>Number of Assessments in Folder</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <formula>CASESAFEID(Student__r.Admissions_File__r.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Leaving_Date__c</fullName>
        <formula>Student__r.Admissions_File__r.Leaving_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Leaving Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <formula>TEXT(Student__r.Admissions_File__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
</CustomObject>